fix java 8 compat